app/assets/stylesheets/main.scss
@import './favourites';
@import './comments';
@import './sessions';
@import './stories';
@import './users';
@import './footer';

// trix
// Remove actiontext.scss for custom styling
// @import "./actiontext.scss";
@import "./trix.scss";

@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@400;500;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');


$primaryYellow: #FFC017;
$logoFont: 'Newsreader';
$secondaryFont: 'Inter';
$logoFontWeight: 100;
$highlight: linear-gradient(180deg, $primaryYellow 65%, white 65%);

h1, h2, h3, h4, h5, h6, p, a {
  font-family: $logoFont;
}

html, body {
  width: 100vw
}

header {
  background-color: $primaryYellow;
  margin: 0;
  padding-top: 5px;

  .main-header-container {
    display: flex;
    justify-content: space-between;
    padding: 1rem 0 0 2rem;

    .logo-tagline-container {
      display: flex;

      h1 {
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin: 0 1em 1em 0;
        padding-top: 2px;
      }

      h1 a:link {
        text-decoration: none;
        font-weight: $logoFontWeight;
      }

      a {
        background: $highlight;

      }

      .logo {
        color: black;
      }

      h2 {
        font-size: medium;
        margin-top: 1em;
      }
    }

    nav {
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin: 0 2rem 1.2em 0;
    }
  }
}


.header-nav-links.nav-links {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  width: 16rem;
  padding-top: 1em;

  a {
    color: black;
  }

  // Navigation links
  a:link {
    text-decoration: none;
    height: fit-content;
  }

  a:hover {
    background: $highlight;
  }
}


.hero-container {
  .hero-line {
    background-color: black;
    height: 1px;
  }

  .hero-background {
    background-color: $primaryYellow;
    height: 25vh;
    margin: 0;

    .hero-content {
      display: flex;
      flex-direction: column;

      h1 {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        margin-top: 0;
        margin-left: 3rem;
        padding-top: 2.5rem;
        margin-bottom: 0;
        padding-bottom: 0;
      }

      .hero-p {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        padding: 0 0 0 3rem;
        margin: 0;
        width: 45vw;
      }

      .hero-btn {
        margin: 1rem 0 0 8rem;
      }
    }
  }
}

.btn {
  padding: 4px 6px 4px 6px;
  border: black solid 2px;
  border-radius: 25px;
  width: fit-content;
}

@media (max-width: 400px) {
  div.logo-tagline-container {
    display: flex;
    flex-direction: column;

    .tagline {
      display: none;
    }
  }

  .hero-container {
    height: 19vh;
    .hero-background {
      height: 19vh;
    }
  }

  .hero-background {

    h1 {
      display: flex;
      justify-content: center;
    }

    p {
      display: none;
    }
  }

  .section-heading {
    margin-bottom: 1.5em;
  }

  nav.topics {
    width: 90vw;
  }

  div.story-card#story-card {
    min-width: 20rem;
  }

  h1.section-heading {

  }
}

.center {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.margin-top-2 {
  margin-top: 2rem;
}



@media (max-width: 1300px) {
  .box-shadow {
    margin: 6em 12em 3em 12em;
  }
}

@media (max-width: 1100px) {
  div.topics-container nav.topics {
    max-width: 80vw;
  }
}

@media (max-width: 751px) {
  .box-shadow {
    margin: 6em 6em 3em 6em;
  }

  div.topics-container nav.topics {
    max-width: 80vw;
  }

  div#story-card.story-card {
    max-width: 40rem;
  }
}

.footer-tag {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

@media (max-width: 1000px) {
  .footer-nav {
    width: 100%;
    a {
      margin: 0 0.5em 0 0.5em;
    }
  }
}

@media (max-width: 350px) {
  .footer-nav {
    flex-wrap: wrap;

    a {
      margin: 0.5em 0 0.5em 0;
    }
  }
}

